--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -137,9 +137,9 @@ flex-direction: row;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+ 
   border: 5px solid rgb(255, 0, 0);
-  height: 300px;
+  height: 190px;
   width:490px;
   color: red;
   @media (max-width: 550px) {
@@ -153,4 +153,15 @@ input{
 }
 .titulo2{
   font-size: 50px;
+}
+.pixel {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+.pixel:hover {
+  cursor: pointer;
+}
+.row {
+  display: flex;
+  width: fit-content;
 }
